			     BZFlag Release Notes
			     ====================

BZFlag 1.11.x (development)
---------------------------

* Display player addr on join to admins - Sean Morrison
* Make -debug a public client option - Frank Thilo
* Communicate autopilot state, display in scoreboard - Frank Thilo
* Observer counts and match times added to game queries - David Vuorio
* Central authentication - Tim Riker
* Avoid transfer flag cheat - Alfredo Tupone
* Cheat client flag obfuscation and hiding - Alfredo Tupone
* Added strong authentication via Kerberos - Alfredo Tupone
* BZFlag renders frames and accepts commands during joining - Alfredo Tupone
* Lag is computed only after entering game - Alfredo Tupone
* CTF world used for FFA make bases into boxes - Alfredo Tupone
* Allow elevated bases even without -fb - Alfredo Tupone
* Added optional duration option to /countdown - Sean Morrison
* Added shot mismatch cheat auto-kicking - Julio Jimenez
* Improved double-jump response - Anonymous
* Added physics drivers - Anonymous
* Unlimited altimeter height - Steve Krenzel
* Added /uptime command to print elapsed running time - Angelina Carlton
* Countdown command now shows players 10 sec countdown - Angelina Carlton
* Added a flapping sound for the wings flag - Sean Morrison
* Adding ability to load world from url (http, ftp, file) - Alfredo Tupone
* Reduce network load by buffering UDP packet (no delay) - Alfredo Tupone
* Allow server to control lat and long (-synclocation) - Daniel Remenak
* Added tank spawn expansion effect - Anonymous
* Added tank squishiness - Anonymous, Dave Brosius
* Added animated effects for T, N, TH, O, and CL flags - Anonymous
* BZAdmin now tells more specific reasons why it could not connect - Ian Agar
* Client shows a MessageOfTheDay from the master server on launch - Jeff Myers
* Add generic URL retrieval class - Jeff Myers, Alfredo Tupone
* Windows Multimedia and DirectInput joystick support - Daniel Remenak